name:                hdose
version:             0.1.0.0
synopsis:            A helper tool for conducting dojos. Inspired by dose.py
homepage:            https://github.com/yamadapc/hdose
license:             GPL-3
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Copyright (C) 2014 Pedro Tacla Yamada
category:            Development
build-type:          Simple
extra-source-files:  README.md, LICENSE
cabal-version:       >=1.10

executable hdose
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base >=4.7 && <4.8
                     , process >= 1.2 && < 1.3
                     , stm >= 2.4 && < 2.5
                     , fsnotify >= 0.1 && < 0.2
                     , old-locale >= 1.0 && < 1.1
                     , system-filepath >= 0.4 && < 0.5
                     , system-fileio >= 0.3 && < 0.4
                     , ansi-terminal >= 0.6 && < 0.7
                     , time >= 1.4 && < 1.5
                     , questioner
  hs-source-dirs:      src/
  default-language:    Haskell2010
